bad/2020-07-06/15-49/96.0/build.err
run.c: In function ‘lest’:
run.c:7:11: error: switch quantity not an integer
   switch (crow) {
           ^~~~
run.c:8:2: error: case label does not reduce to an integer constant
  case "A" ... "Z" :
  ^~~~
run.c:9:9: warning: ‘return’ with a value, in function returning void
  return 0;
         ^
run.c:6:7: note: declared here
  void lest (char* crow) {
       ^~~~
run.c:10:2: error: case label does not reduce to an integer constant
  case "a" ... "z" :
  ^~~~
run.c:11:9: warning: ‘return’ with a value, in function returning void
  return 1;
         ^
run.c:6:7: note: declared here
  void lest (char* crow) {
       ^~~~
run.c:12:2: error: case label does not reduce to an integer constant
  case "0" ... "9" :
  ^~~~
run.c:13:9: warning: ‘return’ with a value, in function returning void
  return 2;
         ^
run.c:6:7: note: declared here
  void lest (char* crow) {
       ^~~~